# Traffic_collection

./: README.md
p4_source/: CMakeLists.txt  README.md
p4_source/shared/: acl.p4  bfd.p4  carry_entries.p4  dtel.p4  etrap.p4  hash.p4  headers.p4  inner_hash.p4  ipv4_csum.p4  l2.p4  l3.p4  meter.p4  mirror_rewrite.p4  multicast.p4  nat.p4  nexthop.p4  parde.p4  port.p4  qos.p4  rmac.p4  sfc_ghost.p4  sfc_trigger.p4  sflow.p4  tunnel.p4  types.p4  util.p4  validation.p4  wred.p4
p4_source/switch-tofino/: switch-tna-sai.conf  switch_tofino_x1.p4  switch_tofino_x2.p4  switch_tofino_x3.p4  switch_tofino_x4.p4  switch_tofino_x5.p4  switch_tofino_x6.p4
p4_source/switch-tofino2/: switch_tofino2_y0.p4  switch_tofino2_y1.p4  switch_tofino2_y2.p4  switch_tofino2_y3.p4  switch_tofino2_y4.p4  switch_tofino2_y5.p4  switch_tofino2_y7.p4  switch_tofino2_z2.p4
sonic_update/: copy.sh  自定义SONIC镜像编译与安装.docx
sonic_update/file_update/: build_debian.sh
sonic_update/file_update/files/pre_build_deb/: bfnplatform_1.0.0_amd64.deb
sonic_update/file_update/platform/barefoot/: bfn-platform.mk  bfn-sai.mk  docker-syncd-bfn-rpc.mk  docker-syncd-bfn.mk
sonic_update/file_update/platform/barefoot/docker-syncd-bfn/: Dockerfile.j2
sonic_update/file_update/platform/barefoot/docker-syncd-bfn-rpc/: Dockerfile.j2
sonic_update/file_update/rules/: snmpd.mk
sonic_update/file_update/src/snmpd/: Makefile
sonic_update/file_update/src/sonic-build-hooks/: Makefile
sonic_update/file_update/src/sonic-p4rt/: Makefile
sonic_update/file_update/src/sonic-p4rt/sonic-pins/p4_pdpi/: ir.cc  ir.proto  pd.cc  pdgenlib.cc
sonic_update/file_update/src/sonic-p4rt/sonic-pins/p4rt_app/: p4rt.cc
sonic_update/file_update/src/sonic-p4rt/sonic-pins/p4rt_app/p4runtime/: p4runtime_impl.cc  sdn_controller_manager.cc
sonic_update/file_update/src/sonic-p4rt/sonic-pins/p4rt_app/sonic/: app_db_manager.cc  app_db_to_pdpi_ir_translator.cc  packetio_impl.cc  packetio_port.cc  receive_genetlink.cc  response_handler.cc
sonic_update/file_update/src/sonic-swss/orchagent/: Makefile.am
sonic_update/file_update/src/sonic-swss/orchagent/p4orch/: acl_util.h  p4oidmapper.cpp  p4oidmapper.h  p4orch.cpp  p4orch.h  p4orch_util.h  udf_table_manager.cpp  udf_table_manager.h
sonic_update/file_update/src/sonic-swss/orchagent/p4orch/tests/: Makefile  Makefile.am  Makefile.in
sonic_update/file_update/src/sonic-swss/tests/mock_tests/: Makefile.am
sonic_update/sonic-slave-bullseye/: Dockerfile.j2
sonic_update/sonic-slave-buster/: Dockerfile.j2
traffic-collection/: Makefile  README.md  collect-start.sh  config.c  config.h  error.h  log.c  log.h  main.c  packet-capture.service  packet.c  packet.h  params.h  util.c  util.h
traffic-collection/traffic/: category.conf  default.conf
